--- a/i18n/es.PO
+++ b/i18n/es.PO
@@ -1,23 +1,26 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* website_photogallery
+# 	* website_photogallery
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 9.0c\n"
-"Report-Msgid-Bugs-To: oscar.hall@outlook.com \n"
-"POT-Creation-Date: 2016-07-25 22:46+0000\n"
-"PO-Revision-Date: 2016-07-25 22:46+0000\n"
-"Last-Translator: <Oscar Hall>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2016-07-25 19:44-0400\n"
+"PO-Revision-Date: 2016-07-25 19:59-0400\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 1.8.8\n"
+"Last-Translator: \n"
+"Language: es_CL\n"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_comments
 #: model:ir.ui.view,arch_db:website_photogallery.view_product_image_form
+#, fuzzy
 msgid "Comments"
 msgstr "Comentarios"
 
@@ -44,7 +47,7 @@ msgstr "Gallería"
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_image
@@ -76,7 +79,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:website_photogallery.action_website_photogallery
 #: model:ir.ui.menu,name:website_photogallery.menu_website_photogallery
 msgid "Photo Gallery"
-msgstr "Galería de fotos"
+msgstr "Gallería de fotos"
 
 #. module: website_photogallery
 #: model:ir.ui.view,arch_db:website_photogallery.view_product_image_form
@@ -92,10 +95,9 @@ msgstr ""
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_preview
 msgid "unknown"
-msgstr ""
+msgstr "desconocidos"
 
 #. module: website_photogallery
 #: model:ir.model,name:website_photogallery.model_website_photogallery
 msgid "website.photogallery"
 msgstr ""
-
