--- a/i18n/pt.po
+++ b/i18n/pt.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 9.0c\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-25 19:44-0400\n"
-"PO-Revision-Date: 2016-07-25 20:24-0400\n"
+"POT-Creation-Date: 2016-07-26 09:20-0400\n"
+"PO-Revision-Date: 2016-07-26 09:33-0400\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,34 +15,33 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.8.8\n"
 "Last-Translator: \n"
-"Language: es_ES\n"
+"Language: pt\n"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_comments
 #: model:ir.ui.view,arch_db:website_photogallery.view_product_image_form
-#, fuzzy
 msgid "Comments"
-msgstr "Comentarios"
+msgstr "Comentários"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_create_uid
 msgid "Created by"
-msgstr "Creado por"
+msgstr "Criado por"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_create_date
 msgid "Created on"
-msgstr "Creado en"
+msgstr "Criado em"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_display_name
 msgid "Display Name"
-msgstr "Nombre"
+msgstr "Nome"
 
 #. module: website_photogallery
 #: model:website.menu,name:website_photogallery.photogallery_menu
 msgid "Gallery"
-msgstr "Gallería"
+msgstr "Galeria"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_id
@@ -53,49 +52,49 @@ msgstr "ID"
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_image
 #: model:ir.ui.view,arch_db:website_photogallery.view_product_image_form
 msgid "Image"
-msgstr "Imagen"
+msgstr "Imagem"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_name
 msgid "Image Title"
-msgstr "Título de imagen"
+msgstr "Título da Imagem"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery___last_update
 msgid "Last Modified on"
-msgstr "Fecha de modificacíon"
+msgstr "Data de modificação"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_write_uid
 msgid "Last Updated by"
-msgstr "Actualizado por"
+msgstr "Atualizações por"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_write_date
 msgid "Last Updated on"
-msgstr "Fecha de actualización"
+msgstr "Data de actualização"
 
 #. module: website_photogallery
 #: model:ir.actions.act_window,name:website_photogallery.action_website_photogallery
 #: model:ir.ui.menu,name:website_photogallery.menu_website_photogallery
 msgid "Photo Gallery"
-msgstr "Gallería de Fotos"
+msgstr "Galeria de Fotos"
 
 #. module: website_photogallery
 #: model:ir.ui.view,arch_db:website_photogallery.view_product_image_form
 msgid "Preview (Only when saved)"
-msgstr "Preestreno (Sólo cuando se guarda)"
+msgstr "Visualização (Apenas quando salvo)"
 
 #. module: website_photogallery
 #: model:ir.ui.view,arch_db:website_photogallery.view_product_image_form
 #: model:ir.ui.view,arch_db:website_photogallery.view_product_image_tree
 msgid "Product Images"
-msgstr "Imágenes de pruducto"
+msgstr "Imagens do produto"
 
 #. module: website_photogallery
 #: model:ir.model.fields,field_description:website_photogallery.field_website_photogallery_preview
 msgid "unknown"
-msgstr "desconocido"
+msgstr "desconhecido"
 
 #. module: website_photogallery
 #: model:ir.model,name:website_photogallery.model_website_photogallery
